--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ img, audio, video {
 
 /* ===== BASE STYLES ===== */
 html{
-  background-image: url(/images/Coffee)
+  background-image: url(/images/Coffee.jpg)
   background-color:#d9d5c1;
 
 }
