--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ h1 {
    color : #5a9258;
    font-size : 25px;
    padding : 5px;
+   vertical-align: text-top;
    text-align : center;
 }
 h2 {
@@ -99,18 +100,21 @@ h2 {
    font-weight : bold;
    font-size : 39px;
    padding : 3px;
+   vertical-align: text-top;
    text-align : center;
 }
 p {
    font-family : 'Dosis', sans-serif;
    text-align : center;
    font-size : 20px;
+   vertical-align: text-top;
 }
 input[type="text"], input[type="password"], input[type="email"] {
    font-family : 'Dosis', sans-serif;
-   width : 100%;
+   width : 50%;
    padding : 15px;
    margin : 5px 0 22px 15px;
+   vertical-align: text-bottom;
    display : inline-block;
    border : none;
    background-color : lightyellow;
@@ -145,5 +149,9 @@ button {
 }
 html {
    font-size : 35px;
+}
+@media screen and (max-width:768px) {
+form {
+  width: 100%;
 }
 }
