--- a/css/main.css
+++ b/css/main.css
@@ -1,162 +1,159 @@
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
-   margin : 0;
-   border : 0;
-   font : inherit;
-   vertical-align : baseline;
+margin : 0;
+border : 0;
+font : inherit;
+vertical-align : baseline;
 }
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section {
-   display : block;
+display : block;
 }
 html {
-   line-height : 1;
+line-height : 1;
 }
 body {
-   line-height : inherit;
+line-height : inherit;
 }
 ol, ul {
-   list-style : none;
+list-style : none;
 }
 blockquote, q {
-   quotes : none;
+quotes : none;
 }
 blockquote:after, blockquote:before, q:after, q:before {
-   content : '';
-   content : none;
+content : '';
+content : none;
 }
 table {
-   border-collapse : collapse;
-   border-spacing : 0;
+border-collapse : collapse;
+border-spacing : 0;
 }
 button, input, optgroup, select, textarea {
-   font-family : sans-serif;
-   font-size : 100%;
-   line-height : 1.15;
-   margin : 0;
+font-family : sans-serif;
+font-size : 100%;
+line-height : 1.15;
+margin : 0;
 }
 button, input {
-   overflow : visible;
+overflow : visible;
 }
 button, select {
-   text-transform : none;
+text-transform : none;
 }
 button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
-   border-style : none;
-   padding : 0;
+border-style : none;
+padding : 0;
 }
 button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
-   outline : 1px dotted ButtonText;
+outline : 1px dotted ButtonText;
 }
 fieldset {
-   border : #c0c0c0 solid 1px;
-   margin : 0 2px;
-   padding : 0.35em 0.625em 0.75em;
+border : #c0c0c0 solid 1px;
+margin : 0 2px;
+padding : 0.35em 0.625em 0.75em;
 }
 legend {
-   box-sizing : border-box;
-   color : inherit;
-   display : table;
-   max-width : 100%;
-   padding : 0;
-   white-space : normal;
+box-sizing : border-box;
+color : inherit;
+display : table;
+max-width : 100%;
+padding : 0;
+white-space : normal;
 }
 progress {
-   display : inline-block;
-   vertical-align : baseline;
+display : inline-block;
+vertical-align : baseline;
 }
 textarea {
-   overflow : auto;
+overflow : auto;
 }
 [type="checkbox"], [type="radio"] {
-   box-sizing : border-box;
-   padding : 0;
+box-sizing : border-box;
+padding : 0;
 }
 [type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
-   height : auto;
+height : auto;
 }
 [type="search"] {
-   outline-offset : -2px;
+outline-offset : -2px;
 }
 ::-webkit-file-upload-button {
-   font : inherit;
+font : inherit;
 }
 img, audio, video {
-   display : block;
-   max-width : 100%;
+display : block;
+max-width : 100%;
 }
 body {
-   background-image: url("/images/microphone");
-
+background-image : url("/images/microphone.jpg");
+background : linear-gradient(to bottom right, lightblue, plum);
 }
 h1 {
-   font-family : 'Bellefair', serif;
-   color : #5a9258;
-   font-size : 25px;
-   
-   margin: 5px;
-   text-align : auto;
-   vertical-align: text-bottom;
+font-family : 'Bellefair', Times, serif;
+color : #5a9258;
+font-size : 3.998em;
+margin : 5px;
+line-height : 1.2em;
+vertical-align : text-bottom;
 }
 h2 {
-   font-family : 'Bellefair', serif;
-   color : black;
-   font-weight : bold;
-   font-size : 39px;
-   
-   text-align : auto;
-   vertical-align: text-bottom;
+font-family : 'Bellefair', Times, serif;
+color : black;
+font-weight : bold;
+font-size : 2.827em;
+line-height : 1.2em;
+vertical-align : text-bottom;
 }
 p {
-   font-family : 'Dosis', sans-serif;
-   text-align : auto;
-   font-size : 20px;
-   vertical-align: text-top;
-   padding-bottom: 1em;
-   
+font-family : 'Dosis', helvetica, sans-serif;
+font-size : 1.414em;
+vertical-align : text-top;
+padding-bottom : 1em;
+line-height : 1.2em;
 }
 input[type="text"], input[type="password"], input[type="email"] {
-   font-family : 'Dosis', sans-serif;
-   width : 50%;
-   padding : .5em;
-   margin : .5em .5em 1em 1em;
-   display :  block;
-   border : double;
-   background-color : lightyellow;
-   vertical-align: text-top;
-
+font-family : 'Dosis', helvetica, sans-serif;
+width : 50%;
+padding : 0.5em;
+margin : 0.5em 0.5em 1em 1em;
+display : block;
+border : double;
+background-color : lightyellow;
+vertical-align : text-top;
 }
 button {
-   background-color : #4CAF50;
-   color : white;
-   padding : 14px 20px;
-   margin : 8px 0;
-   border : none;
-   cursor : pointer;
-   width : 100%;
-   opacity : 0.89999997615814208984375;
+background-color : #4CAF50;
+color : white;
+padding : 14px 20px;
+margin : 8px 0;
+border : none;
+cursor : pointer;
+width : 100%;
+opacity : 0.89999997615814208984375;
 }
 .signupbtn {
-   width : 50%;
+width : 50%;
 }
 @media screen and (min-width:480px) {
 form {
-   padding-top : 1em;
-   padding-left : 1em;
-   width : 80%;
+padding-top : 1em;
+padding-left : 1em;
+width : 80%;
 }
 h1 {
-   font-size : 50px;
+font-size : 50px;
 }
 h2 {
-   font-size : 70px;
+font-size : 70px;
 }
 button {
-   width : 100%;
+width : 100%;
 }
 html {
-   font-size : 35px;
+font-size : 35px;
+}
 }
 @media screen and (max-width:768px) {
 form {
-  width: 100%;
+width : 100%;
 }
 }
